syntax.output
Terminals unused in grammar

   TRUE
   FALSE


Grammar

    0 $accept: program $end

    1 program: class program
    2        | /* empty */

    3 class: CLASS TYPE inherits LC features RC
    4      | error TYPE inherits LC features RC
    5      | CLASS error inherits LC features RC
    6      | CLASS TYPE inherits error features RC
    7      | CLASS TYPE inherits LC features error

    8 inherits: INHERITS TYPE
    9         | /* empty */
   10         | INHERITS error

   11 features: feature features
   12         | /* empty */

   13 feature: varDec SEMI
   14        | funDec

   15 varDec: varDec COMMA ID
   16       | varDec COMMA ID ASSIGN expr
   17       | type ID
   18       | type ID ASSIGN expr
   19       | /* empty */
   20       | varDec COMMA error
   21       | varDec COMMA error ASSIGN expr
   22       | varDec COMMA ID error expr
   23       | varDec COMMA ID ASSIGN error

   24 array: LB RB
   25      | array LB RB

   26 arrayExpr: arrayExpr LB expr RB
   27          | LB expr RB

   28 arrayExprDec: arrayExprDec LB INT RB
   29             | LB INT RB

   30 argDec: argDec COMMA type ID
   31       | type ID
   32       | /* empty */
   33       | error COMMA type ID
   34       | argDec COMMA error ID
   35       | argDec COMMA type error
   36       | error ID
   37       | type error

   38 funDec: type ID LP argDec RP LC stmts RC
   39       | type error LP argDec RP LC stmts RC
   40       | type ID error argDec RP LC stmts RC
   41       | type ID LP error RP LC stmts RC
   42       | type ID LP argDec RP error stmts RC
   43       | type ID LP argDec RP LC error RC

   44 type: TYPE
   45     | TYPE array
   46     | VOID

   47 stmts: stmt stmts
   48      | /* empty */
   49      | stmt error

   50 compSt: LC stmts RC
   51       | LC error RC

   52 stmt: expr SEMI
   53     | RETURN expr SEMI
   54     | BREAK SEMI
   55     | CONTINUE SEMI
   56     | IF LP logexpr RP stmt
   57     | IF LP logexpr RP stmt ELSE stmt
   58     | WHILE LP logexpr RP stmt
   59     | FOR LP forexpr SEMI logexpr SEMI forexpr RP stmt
   60     | varDec SEMI
   61     | compSt
   62     | error SEMI
   63     | expr error
   64     | error expr SEMI
   65     | RETURN error SEMI
   66     | RETURN expr error
   67     | BREAK error
   68     | CONTINUE error
   69     | WHILE error logexpr RP stmt
   70     | WHILE LP error RP stmt
   71     | WHILE LP logexpr error stmt
   72     | FOR error forexpr SEMI logexpr SEMI forexpr RP stmt
   73     | FOR LP forexpr SEMI error SEMI forexpr RP stmt
   74     | FOR LP forexpr SEMI logexpr error forexpr RP stmt
   75     | IF error logexpr RP stmt ELSE stmt
   76     | IF LP error RP stmt ELSE stmt
   77     | IF LP logexpr error stmt ELSE stmt
   78     | IF LP logexpr RP error ELSE stmt
   79     | IF error logexpr RP stmt
   80     | IF LP error RP stmt
   81     | IF LP logexpr error stmt

   82 forexpr: expr
   83        | /* empty */
   84        | error

   85 logexpr: logexpr AND logexpr
   86        | logexpr OR logexpr
   87        | expr NE expr
   88        | expr EQ expr
   89        | expr GE expr
   90        | expr LE expr
   91        | expr GT expr
   92        | expr LT expr
   93        | NOT logexpr
   94        | LP logexpr RP
   95        | error AND logexpr
   96        | error OR logexpr
   97        | error NE expr
   98        | expr error expr
   99        | expr NE error
  100        | error EQ expr
  101        | expr EQ error
  102        | error GE expr
  103        | expr GE error
  104        | error LE expr
  105        | expr LE error
  106        | error GT expr
  107        | expr GT error
  108        | error LT expr
  109        | expr LT error
  110        | error logexpr RP
  111        | LP error RP
  112        | LP logexpr error

  113 expr: expr MINUS expr
  114     | expr PLUS expr
  115     | expr MULT expr
  116     | expr DIV expr
  117     | expr ASSIGN expr
  118     | ID arrayExpr
  119     | expr DOT expr
  120     | LP expr RP
  121     | MINUS expr
  122     | ID LP args RP
  123     | NEW TYPE arrayExprDec
  124     | NEW TYPE
  125     | ID
  126     | STRCONSTANT
  127     | INT
  128     | NUL
  129     | expr MINUS error
  130     | expr PLUS error
  131     | expr MULT error
  132     | expr DIV error
  133     | MINUS error
  134     | ID LP error RP

  135 args: expr COMMA args
  136     | expr
  137     | /* empty */
  138     | error COMMA args
  139     | expr error args
  140     | expr COMMA error


Terminals, with rules where they appear

$end (0) 0
error (256) 4 5 6 7 10 20 21 22 23 33 34 35 36 37 39 40 41 42 43 49
    51 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
    84 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111
    112 129 130 131 132 133 134 138 139 140
INT (258) 28 29 127
STRCONSTANT (259) 126
TYPE (260) 3 4 6 7 8 44 45 123 124
ID (261) 15 16 17 18 22 23 30 31 33 34 36 38 40 41 42 43 118 122 125
    134
CLASS (262) 3 5 6 7
COMMA (263) 15 16 20 21 22 23 30 33 34 35 135 138 140
BREAK (264) 54 67
CONTINUE (265) 55 68
ELSE (266) 57 75 76 77 78
VOID (267) 46
FOR (268) 59 72 73 74
IF (269) 56 57 75 76 77 78 79 80 81
INHERITS (270) 8 10
NEW (271) 123 124
NUL (272) 128
RETURN (273) 53 65 66
TRUE (274)
WHILE (275) 58 69 70 71
LC (276) 3 4 5 7 38 39 40 41 43 50 51
RC (277) 3 4 5 6 38 39 40 41 42 43 50 51
LB (278) 24 25 26 27 28 29
RB (279) 24 25 26 27 28 29
SEMI (280) 13 52 53 54 55 59 60 62 64 65 72 73 74
LP (281) 38 39 41 42 43 56 57 58 59 70 71 73 74 76 77 78 80 81 94 111
    112 120 122 134
RP (282) 38 39 40 41 42 43 56 57 58 59 69 70 72 73 74 75 76 78 79 80
    94 110 111 120 122 134
DOT (283) 119
PLUS (284) 114 130
DIV (285) 116 132
MINUS (286) 113 121 129 133
MULT (287) 115 131
ASSIGN (288) 16 18 21 23 117
EQ (289) 88 100 101
LT (290) 92 108 109
GT (291) 91 106 107
LE (292) 90 104 105
GE (293) 89 102 103
NE (294) 87 97 99
AND (295) 85 95
OR (296) 86 96
NOT (297) 93
FALSE (298)
LOWER_THAN_ELSE (299)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1 2, on right: 0 1
class (47)
    on left: 3 4 5 6 7, on right: 1
inherits (48)
    on left: 8 9 10, on right: 3 4 5 6 7
features (49)
    on left: 11 12, on right: 3 4 5 6 7 11
feature (50)
    on left: 13 14, on right: 11
varDec (51)
    on left: 15 16 17 18 19 20 21 22 23, on right: 13 15 16 20 21 22
    23 60
array (52)
    on left: 24 25, on right: 25 45
arrayExpr (53)
    on left: 26 27, on right: 26 118
arrayExprDec (54)
    on left: 28 29, on right: 28 123
argDec (55)
    on left: 30 31 32 33 34 35 36 37, on right: 30 34 35 38 39 40 42
    43
funDec (56)
    on left: 38 39 40 41 42 43, on right: 14
type (57)
    on left: 44 45 46, on right: 17 18 30 31 33 35 37 38 39 40 41 42
    43
stmts (58)
    on left: 47 48 49, on right: 38 39 40 41 42 47 50
compSt (59)
    on left: 50 51, on right: 61
stmt (60)
    on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69
    70 71 72 73 74 75 76 77 78 79 80 81, on right: 47 49 56 57 58 59
    69 70 71 72 73 74 75 76 77 78 79 80 81
forexpr (61)
    on left: 82 83 84, on right: 59 72 73 74
logexpr (62)
    on left: 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102
    103 104 105 106 107 108 109 110 111 112, on right: 56 57 58 59
    69 71 72 74 75 77 78 79 81 85 86 93 94 95 96 110 112
expr (63)
    on left: 113 114 115 116 117 118 119 120 121 122 123 124 125 126
    127 128 129 130 131 132 133 134, on right: 16 18 21 22 26 27 52
    53 63 64 66 82 87 88 89 90 91 92 97 98 99 100 101 102 103 104 105
    106 107 108 109 113 114 115 116 117 119 120 121 129 130 131 132
    135 136 139 140
args (64)
    on left: 135 136 137 138 139 140, on right: 122 135 138 139


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 2 (program)

    program  go to state 3
    class    go to state 4


state 1

    4 class: error . TYPE inherits LC features RC

    TYPE  shift, and go to state 5


state 2

    3 class: CLASS . TYPE inherits LC features RC
    5      | CLASS . error inherits LC features RC
    6      | CLASS . TYPE inherits error features RC
    7      | CLASS . TYPE inherits LC features error

    error  shift, and go to state 6
    TYPE   shift, and go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: class . program

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 2 (program)

    program  go to state 9
    class    go to state 4


state 5

    4 class: error TYPE . inherits LC features RC

    INHERITS  shift, and go to state 10

    $default  reduce using rule 9 (inherits)

    inherits  go to state 11


state 6

    5 class: CLASS error . inherits LC features RC

    INHERITS  shift, and go to state 10

    $default  reduce using rule 9 (inherits)

    inherits  go to state 12


state 7

    3 class: CLASS TYPE . inherits LC features RC
    6      | CLASS TYPE . inherits error features RC
    7      | CLASS TYPE . inherits LC features error

    INHERITS  shift, and go to state 10

    $default  reduce using rule 9 (inherits)

    inherits  go to state 13


state 8

    0 $accept: program $end .

    $default  accept


state 9

    1 program: class program .

    $default  reduce using rule 1 (program)


state 10

    8 inherits: INHERITS . TYPE
   10         | INHERITS . error

    error  shift, and go to state 14
    TYPE   shift, and go to state 15


state 11

    4 class: error TYPE inherits . LC features RC

    LC  shift, and go to state 16


state 12

    5 class: CLASS error inherits . LC features RC

    LC  shift, and go to state 17


state 13

    3 class: CLASS TYPE inherits . LC features RC
    6      | CLASS TYPE inherits . error features RC
    7      | CLASS TYPE inherits . LC features error

    error  shift, and go to state 18
    LC     shift, and go to state 19


state 14

   10 inherits: INHERITS error .

    $default  reduce using rule 10 (inherits)


state 15

    8 inherits: INHERITS TYPE .

    $default  reduce using rule 8 (inherits)


state 16

    4 class: error TYPE inherits LC . features RC

    TYPE  shift, and go to state 20
    VOID  shift, and go to state 21

    RC        reduce using rule 12 (features)
    $default  reduce using rule 19 (varDec)

    features  go to state 22
    feature   go to state 23
    varDec    go to state 24
    funDec    go to state 25
    type      go to state 26


state 17

    5 class: CLASS error inherits LC . features RC

    TYPE  shift, and go to state 20
    VOID  shift, and go to state 21

    RC        reduce using rule 12 (features)
    $default  reduce using rule 19 (varDec)

    features  go to state 27
    feature   go to state 23
    varDec    go to state 24
    funDec    go to state 25
    type      go to state 26


state 18

    6 class: CLASS TYPE inherits error . features RC

    TYPE  shift, and go to state 20
    VOID  shift, and go to state 21

    RC        reduce using rule 12 (features)
    $default  reduce using rule 19 (varDec)

    features  go to state 28
    feature   go to state 23
    varDec    go to state 24
    funDec    go to state 25
    type      go to state 26


state 19

    3 class: CLASS TYPE inherits LC . features RC
    7      | CLASS TYPE inherits LC . features error

    TYPE  shift, and go to state 20
    VOID  shift, and go to state 21

    COMMA     reduce using rule 19 (varDec)
    SEMI      reduce using rule 19 (varDec)
    $default  reduce using rule 12 (features)

    features  go to state 29
    feature   go to state 23
    varDec    go to state 24
    funDec    go to state 25
    type      go to state 26


state 20

   44 type: TYPE .
   45     | TYPE . array

    LB  shift, and go to state 30

    $default  reduce using rule 44 (type)

    array  go to state 31


state 21

   46 type: VOID .

    $default  reduce using rule 46 (type)


state 22

    4 class: error TYPE inherits LC features . RC

    RC  shift, and go to state 32


state 23

   11 features: feature . features

    TYPE  shift, and go to state 20
    VOID  shift, and go to state 21

    COMMA     reduce using rule 19 (varDec)
    SEMI      reduce using rule 19 (varDec)
    $default  reduce using rule 12 (features)

    features  go to state 33
    feature   go to state 23
    varDec    go to state 24
    funDec    go to state 25
    type      go to state 26


state 24

   13 feature: varDec . SEMI
   15 varDec: varDec . COMMA ID
   16       | varDec . COMMA ID ASSIGN expr
   20       | varDec . COMMA error
   21       | varDec . COMMA error ASSIGN expr
   22       | varDec . COMMA ID error expr
   23       | varDec . COMMA ID ASSIGN error

    COMMA  shift, and go to state 34
    SEMI   shift, and go to state 35


state 25

   14 feature: funDec .

    $default  reduce using rule 14 (feature)


state 26

   17 varDec: type . ID
   18       | type . ID ASSIGN expr
   38 funDec: type . ID LP argDec RP LC stmts RC
   39       | type . error LP argDec RP LC stmts RC
   40       | type . ID error argDec RP LC stmts RC
   41       | type . ID LP error RP LC stmts RC
   42       | type . ID LP argDec RP error stmts RC
   43       | type . ID LP argDec RP LC error RC

    error  shift, and go to state 36
    ID     shift, and go to state 37


state 27

    5 class: CLASS error inherits LC features . RC

    RC  shift, and go to state 38


state 28

    6 class: CLASS TYPE inherits error features . RC

    RC  shift, and go to state 39


state 29

    3 class: CLASS TYPE inherits LC features . RC
    7      | CLASS TYPE inherits LC features . error

    error  shift, and go to state 40
    RC     shift, and go to state 41


state 30

   24 array: LB . RB

    RB  shift, and go to state 42


state 31

   25 array: array . LB RB
   45 type: TYPE array .

    LB  shift, and go to state 43

    $default  reduce using rule 45 (type)


state 32

    4 class: error TYPE inherits LC features RC .

    $default  reduce using rule 4 (class)


state 33

   11 features: feature features .

    $default  reduce using rule 11 (features)


state 34

   15 varDec: varDec COMMA . ID
   16       | varDec COMMA . ID ASSIGN expr
   20       | varDec COMMA . error
   21       | varDec COMMA . error ASSIGN expr
   22       | varDec COMMA . ID error expr
   23       | varDec COMMA . ID ASSIGN error

    error  shift, and go to state 44
    ID     shift, and go to state 45


state 35

   13 feature: varDec SEMI .

    $default  reduce using rule 13 (feature)


state 36

   39 funDec: type error . LP argDec RP LC stmts RC

    LP  shift, and go to state 46


state 37

   17 varDec: type ID .
   18       | type ID . ASSIGN expr
   38 funDec: type ID . LP argDec RP LC stmts RC
   40       | type ID . error argDec RP LC stmts RC
   41       | type ID . LP error RP LC stmts RC
   42       | type ID . LP argDec RP error stmts RC
   43       | type ID . LP argDec RP LC error RC

    error   shift, and go to state 47
    LP      shift, and go to state 48
    ASSIGN  shift, and go to state 49

    COMMA  reduce using rule 17 (varDec)
    SEMI   reduce using rule 17 (varDec)


state 38

    5 class: CLASS error inherits LC features RC .

    $default  reduce using rule 5 (class)


state 39

    6 class: CLASS TYPE inherits error features RC .

    $default  reduce using rule 6 (class)


state 40

    7 class: CLASS TYPE inherits LC features error .

    $default  reduce using rule 7 (class)


state 41

    3 class: CLASS TYPE inherits LC features RC .

    $default  reduce using rule 3 (class)


state 42

   24 array: LB RB .

    $default  reduce using rule 24 (array)


state 43

   25 array: array LB . RB

    RB  shift, and go to state 50


state 44

   20 varDec: varDec COMMA error .
   21       | varDec COMMA error . ASSIGN expr

    ASSIGN  shift, and go to state 51

    $default  reduce using rule 20 (varDec)


state 45

   15 varDec: varDec COMMA ID .
   16       | varDec COMMA ID . ASSIGN expr
   22       | varDec COMMA ID . error expr
   23       | varDec COMMA ID . ASSIGN error

    error   shift, and go to state 52
    ASSIGN  shift, and go to state 53

    COMMA  reduce using rule 15 (varDec)
    SEMI   reduce using rule 15 (varDec)


state 46

   39 funDec: type error LP . argDec RP LC stmts RC

    error  shift, and go to state 54
    TYPE   shift, and go to state 20
    VOID   shift, and go to state 21

    COMMA  reduce using rule 32 (argDec)
    RP     reduce using rule 32 (argDec)

    argDec  go to state 55
    type    go to state 56


state 47

   40 funDec: type ID error . argDec RP LC stmts RC

    error  shift, and go to state 54
    TYPE   shift, and go to state 20
    VOID   shift, and go to state 21

    COMMA  reduce using rule 32 (argDec)
    RP     reduce using rule 32 (argDec)

    argDec  go to state 57
    type    go to state 56


state 48

   38 funDec: type ID LP . argDec RP LC stmts RC
   41       | type ID LP . error RP LC stmts RC
   42       | type ID LP . argDec RP error stmts RC
   43       | type ID LP . argDec RP LC error RC

    error  shift, and go to state 58
    TYPE   shift, and go to state 20
    VOID   shift, and go to state 21

    COMMA  reduce using rule 32 (argDec)
    RP     reduce using rule 32 (argDec)

    argDec  go to state 59
    type    go to state 56


state 49

   18 varDec: type ID ASSIGN . expr

    INT          shift, and go to state 60
    STRCONSTANT  shift, and go to state 61
    ID           shift, and go to state 62
    NEW          shift, and go to state 63
    NUL          shift, and go to state 64
    LP           shift, and go to state 65
    MINUS        shift, and go to state 66

    expr  go to state 67


state 50

   25 array: array LB RB .

    $default  reduce using rule 25 (array)


state 51

   21 varDec: varDec COMMA error ASSIGN . expr

    INT          shift, and go to state 60
    STRCONSTANT  shift, and go to state 61
    ID           shift, and go to state 62
    NEW          shift, and go to state 63
    NUL          shift, and go to state 64
    LP           shift, and go to state 65
    MINUS        shift, and go to state 66

    expr  go to state 68


state 52

   22 varDec: varDec COMMA ID error . expr

    INT          shift, and go to state 60
    STRCONSTANT  shift, and go to state 61
    ID           shift, and go to state 62
    NEW          shift, and go to state 63
    NUL          shift, and go to state 64
    LP           shift, and go to state 65
    MINUS        shift, and go to state 66

    expr  go to state 69


state 53

   16 varDec: varDec COMMA ID ASSIGN . expr
   23       | varDec COMMA ID ASSIGN . error

    error        shift, and go to state 70
    INT          shift, and go to state 60
    STRCONSTANT  shift, and go to state 61
    ID           shift, and go to state 62
    NEW          shift, and go to state 63
    NUL          shift, and go to state 64
    LP           shift, and go to state 65
    MINUS        shift, and go to state 66

    expr  go to state 71


state 54

   33 argDec: error . COMMA type ID
   36       | error . ID

    ID     shift, and go to state 72
    COMMA  shift, and go to state 73


state 55

   30 argDec: argDec . COMMA type ID
   34       | argDec . COMMA error ID
   35       | argDec . COMMA type error
   39 funDec: type error LP argDec . RP LC stmts RC

    COMMA  shift, and go to state 74
    RP     shift, and go to state 75


state 56

   31 argDec: type . ID
   37       | type . error

    error  shift, and go to state 76
    ID     shift, and go to state 77


state 57

   30 argDec: argDec . COMMA type ID
   34       | argDec . COMMA error ID
   35       | argDec . COMMA type error
   40 funDec: type ID error argDec . RP LC stmts RC

    COMMA  shift, and go to state 74
    RP     shift, and go to state 78


state 58

   33 argDec: error . COMMA type ID
   36       | error . ID
   41 funDec: type ID LP error . RP LC stmts RC

    ID     shift, and go to state 72
    COMMA  shift, and go to state 73
    RP     shift, and go to state 79


state 59

   30 argDec: argDec . COMMA type ID
   34       | argDec . COMMA error ID
   35       | argDec . COMMA type error
   38 funDec: type ID LP argDec . RP LC stmts RC
   42       | type ID LP argDec . RP error stmts RC
   43       | type ID LP argDec . RP LC error RC

    COMMA  shift, and go to state 74
    RP     shift, and go to state 80


state 60

  127 expr: INT .

    $default  reduce using rule 127 (expr)


state 61

  126 expr: STRCONSTANT .

    $default  reduce using rule 126 (expr)


state 62

  118 expr: ID . arrayExpr
  122     | ID . LP args RP
  125     | ID .
  134     | ID . LP error RP

    LB  shift, and go to state 81
    LP  shift, and go to state 82

    $default  reduce using rule 125 (expr)

    arrayExpr  go to state 83


state 63

  123 expr: NEW . TYPE arrayExprDec
  124     | NEW . TYPE

    TYPE  shift, and go to state 84


state 64

  128 expr: NUL .

    $default  reduce using rule 128 (expr)


state 65

  120 expr: LP . expr RP

    INT          shift, and go to state 60
    STRCONSTANT  shift, and go to state 61
    ID           shift, and go to state 62
    NEW          shift, and go to state 63
    NUL          shift, and go to state 64
    LP           shift, and go to state 65
    MINUS        shift, and go to state 66

    expr  go to state 85


state 66

  121 expr: MINUS . expr
  133     | MINUS . error

    error        shift, and go to state 86
    INT          shift, and go to state 60
    STRCONSTANT  shift, and go to state 61
    ID           shift, and go to state 62
    NEW          shift, and go to state 63
    NUL          shift, and go to state 64
    LP           shift, and go to state 65
    MINUS        shift, and go to state 66

    expr  go to state 87


state 67

   18 varDec: type ID ASSIGN expr .
  113 expr: expr . MINUS expr
  114     | expr . PLUS expr
  115     | expr . MULT expr
  116     | expr . DIV expr
  117     | expr . ASSIGN expr
  119     | expr . DOT expr
  129     | expr . MINUS error
  130     | expr . PLUS error
  131     | expr . MULT error
  132     | expr . DIV error

    DOT     shift, and go to state 88
    PLUS    shift, and go to state 89
    DIV     shift, and go to state 90
    MINUS   shift, and go to state 91
    MULT    shift, and go to state 92
    ASSIGN  shift, and go to state 93

    $default  reduce using rule 18 (varDec)


state 68

   21 varDec: varDec COMMA error ASSIGN expr .
  113 expr: expr . MINUS expr
  114     | expr . PLUS expr
  115     | expr . MULT expr
  116     | expr . DIV expr
  117     | expr . ASSIGN expr
  119     | expr . DOT expr
  129     | expr . MINUS error
  130     | expr . PLUS error
  131     | expr . MULT error
  132     | expr . DIV error

    DOT     shift, and go to state 88
    PLUS    shift, and go to state 89
    DIV     shift, and go to state 90
    MINUS   shift, and go to state 91
    MULT    shift, and go to state 92
    ASSIGN  shift, and go to state 93

    $default  reduce using rule 21 (varDec)


state 69

   22 varDec: varDec COMMA ID error expr .
  113 expr: expr . MINUS expr
  114     | expr . PLUS expr
  115     | expr . MULT expr
  116     | expr . DIV expr
  117     | expr . ASSIGN expr
  119     | expr . DOT expr
  129     | expr . MINUS error
  130     | expr . PLUS error
  131     | expr . MULT error
  132     | expr . DIV error

    DOT     shift, and go to state 88
    PLUS    shift, and go to state 89
    DIV     shift, and go to state 90
    MINUS   shift, and go to state 91
    MULT    shift, and go to state 92
    ASSIGN  shift, and go to state 93

    $default  reduce using rule 22 (varDec)


state 70

   23 varDec: varDec COMMA ID ASSIGN error .

    $default  reduce using rule 23 (varDec)


state 71

   16 varDec: varDec COMMA ID ASSIGN expr .
  113 expr: expr . MINUS expr
  114     | expr . PLUS expr
  115     | expr . MULT expr
  116     | expr . DIV expr
  117     | expr . ASSIGN expr
  119     | expr . DOT expr
  129     | expr . MINUS error
  130     | expr . PLUS error
  131     | expr . MULT error
  132     | expr . DIV error

    DOT     shift, and go to state 88
    PLUS    shift, and go to state 89
    DIV     shift, and go to state 90
    MINUS   shift, and go to state 91
    MULT    shift, and go to state 92
    ASSIGN  shift, and go to state 93

    $default  reduce using rule 16 (varDec)


state 72

   36 argDec: error ID .

    $default  reduce using rule 36 (argDec)


state 73

   33 argDec: error COMMA . type ID

    TYPE  shift, and go to state 20
    VOID  shift, and go to state 21

    type  go to state 94


state 74

   30 argDec: argDec COMMA . type ID
   34       | argDec COMMA . error ID
   35       | argDec COMMA . type error

    error  shift, and go to state 95
    TYPE   shift, and go to state 20
    VOID   shift, and go to state 21

    type  go to state 96


state 75

   39 funDec: type error LP argDec RP . LC stmts RC

    LC  shift, and go to state 97


state 76

   37 argDec: type error .

    $default  reduce using rule 37 (argDec)


state 77

   31 argDec: type ID .

    $default  reduce using rule 31 (argDec)


state 78

   40 funDec: type ID error argDec RP . LC stmts RC

    LC  shift, and go to state 98


state 79

   41 funDec: type ID LP error RP . LC stmts RC

    LC  shift, and go to state 99


state 80

   38 funDec: type ID LP argDec RP . LC stmts RC
   42       | type ID LP argDec RP . error stmts RC
   43       | type ID LP argDec RP . LC error RC

    error  shift, and go to state 100
    LC     shift, and go to state 101


state 81

   27 arrayExpr: LB . expr RB

    INT          shift, and go to state 60
    STRCONSTANT  shift, and go to state 61
    ID           shift, and go to state 62
    NEW          shift, and go to state 63
    NUL          shift, and go to state 64
    LP           shift, and go to state 65
    MINUS        shift, and go to state 66

    expr  go to state 102


state 82

  122 expr: ID LP . args RP
  134     | ID LP . error RP

    error        shift, and go to state 103
    INT          shift, and go to state 60
    STRCONSTANT  shift, and go to state 61
    ID           shift, and go to state 62
    NEW          shift, and go to state 63
    NUL          shift, and go to state 64
    LP           shift, and go to state 65
    MINUS        shift, and go to state 66

    RP  reduce using rule 137 (args)

    expr  go to state 104
    args  go to state 105


state 83

   26 arrayExpr: arrayExpr . LB expr RB
  118 expr: ID arrayExpr .

    LB  shift, and go to state 106

    $default  reduce using rule 118 (expr)


state 84

  123 expr: NEW TYPE . arrayExprDec
  124     | NEW TYPE .

    LB  shift, and go to state 107

    $default  reduce using rule 124 (expr)

    arrayExprDec  go to state 108


state 85

  113 expr: expr . MINUS expr
  114     | expr . PLUS expr
  115     | expr . MULT expr
  116     | expr . DIV expr
  117     | expr . ASSIGN expr
  119     | expr . DOT expr
  120     | LP expr . RP
  129     | expr . MINUS error
  130     | expr . PLUS error
  131     | expr . MULT error
  132     | expr . DIV error

    RP      shift, and go to state 109
    DOT     shift, and go to state 88
    PLUS    shift, and go to state 89
    DIV     shift, and go to state 90
    MINUS   shift, and go to state 91
    MULT    shift, and go to state 92
    ASSIGN  shift, and go to state 93


state 86

  133 expr: MINUS error .

    $default  reduce using rule 133 (expr)


state 87

  113 expr: expr . MINUS expr
  114     | expr . PLUS expr
  115     | expr . MULT expr
  116     | expr . DIV expr
  117     | expr . ASSIGN expr
  119     | expr . DOT expr
  121     | MINUS expr .
  129     | expr . MINUS error
  130     | expr . PLUS error
  131     | expr . MULT error
  132     | expr . DIV error

    DOT   shift, and go to state 88
    DIV   shift, and go to state 90
    MULT  shift, and go to state 92

    $default  reduce using rule 121 (expr)


state 88

  119 expr: expr DOT . expr

    INT          shift, and go to state 60
    STRCONSTANT  shift, and go to state 61
    ID           shift, and go to state 62
    NEW          shift, and go to state 63
    NUL          shift, and go to state 64
    LP           shift, and go to state 65
    MINUS        shift, and go to state 66

    expr  go to state 110


state 89

  114 expr: expr PLUS . expr
  130     | expr PLUS . error

    error        shift, and go to state 111
    INT          shift, and go to state 60
    STRCONSTANT  shift, and go to state 61
    ID           shift, and go to state 62
    NEW          shift, and go to state 63
    NUL          shift, and go to state 64
    LP           shift, and go to state 65
    MINUS        shift, and go to state 66

    expr  go to state 112


state 90

  116 expr: expr DIV . expr
  132     | expr DIV . error

    error        shift, and go to state 113
    INT          shift, and go to state 60
    STRCONSTANT  shift, and go to state 61
    ID           shift, and go to state 62
    NEW          shift, and go to state 63
    NUL          shift, and go to state 64
    LP           shift, and go to state 65
    MINUS        shift, and go to state 66

    expr  go to state 114


state 91

  113 expr: expr MINUS . expr
  129     | expr MINUS . error

    error        shift, and go to state 115
    INT          shift, and go to state 60
    STRCONSTANT  shift, and go to state 61
    ID           shift, and go to state 62
    NEW          shift, and go to state 63
    NUL          shift, and go to state 64
    LP           shift, and go to state 65
    MINUS        shift, and go to state 66

    expr  go to state 116


state 92

  115 expr: expr MULT . expr
  131     | expr MULT . error

    error        shift, and go to state 117
    INT          shift, and go to state 60
    STRCONSTANT  shift, and go to state 61
    ID           shift, and go to state 62
    NEW          shift, and go to state 63
    NUL          shift, and go to state 64
    LP           shift, and go to state 65
    MINUS        shift, and go to state 66

    expr  go to state 118


state 93

  117 expr: expr ASSIGN . expr

    INT          shift, and go to state 60
    STRCONSTANT  shift, and go to state 61
    ID           shift, and go to state 62
    NEW          shift, and go to state 63
    NUL          shift, and go to state 64
    LP           shift, and go to state 65
    MINUS        shift, and go to state 66

    expr  go to state 119


state 94

   33 argDec: error COMMA type . ID

    ID  shift, and go to state 120


state 95

   34 argDec: argDec COMMA error . ID

    ID  shift, and go to state 121


state 96

   30 argDec: argDec COMMA type . ID
   35       | argDec COMMA type . error

    error  shift, and go to state 122
    ID     shift, and go to state 123


state 97

   39 funDec: type error LP argDec RP LC . stmts RC

    error        shift, and go to state 124
    INT          shift, and go to state 60
    STRCONSTANT  shift, and go to state 61
    TYPE         shift, and go to state 20
    ID           shift, and go to state 62
    BREAK        shift, and go to state 125
    CONTINUE     shift, and go to state 126
    VOID         shift, and go to state 21
    FOR          shift, and go to state 127
    IF           shift, and go to state 128
    NEW          shift, and go to state 63
    NUL          shift, and go to state 64
    RETURN       shift, and go to state 129
    WHILE        shift, and go to state 130
    LC           shift, and go to state 131
    LP           shift, and go to state 65
    MINUS        shift, and go to state 66

    COMMA  reduce using rule 19 (varDec)
    RC     reduce using rule 48 (stmts)
    SEMI   reduce using rule 19 (varDec)

    varDec  go to state 132
    type    go to state 133
    stmts   go to state 134
    compSt  go to state 135
    stmt    go to state 136
    expr    go to state 137


state 98

   40 funDec: type ID error argDec RP LC . stmts RC

    error        shift, and go to state 124
    INT          shift, and go to state 60
    STRCONSTANT  shift, and go to state 61
    TYPE         shift, and go to state 20
    ID           shift, and go to state 62
    BREAK        shift, and go to state 125
    CONTINUE     shift, and go to state 126
    VOID         shift, and go to state 21
    FOR          shift, and go to state 127
    IF           shift, and go to state 128
    NEW          shift, and go to state 63
    NUL          shift, and go to state 64
    RETURN       shift, and go to state 129
    WHILE        shift, and go to state 130
    LC           shift, and go to state 131
    LP           shift, and go to state 65
    MINUS        shift, and go to state 66

    COMMA  reduce using rule 19 (varDec)
    RC     reduce using rule 48 (stmts)
    SEMI   reduce using rule 19 (varDec)

    varDec  go to state 132
    type    go to state 133
    stmts   go to state 138
    compSt  go to state 135
    stmt    go to state 136
    expr    go to state 137


state 99

   41 funDec: type ID LP error RP LC . stmts RC

    error        shift, and go to state 124
    INT          shift, and go to state 60
    STRCONSTANT  shift, and go to state 61
    TYPE         shift, and go to state 20
    ID           shift, and go to state 62
    BREAK        shift, and go to state 125
    CONTINUE     shift, and go to state 126
    VOID         shift, and go to state 21
    FOR          shift, and go to state 127
    IF           shift, and go to state 128
    NEW          shift, and go to state 63
    NUL          shift, and go to state 64
    RETURN       shift, and go to state 129
    WHILE        shift, and go to state 130
    LC           shift, and go to state 131
    LP           shift, and go to state 65
    MINUS        shift, and go to state 66

    COMMA  reduce using rule 19 (varDec)
    RC     reduce using rule 48 (stmts)
    SEMI   reduce using rule 19 (varDec)

    varDec  go to state 132
    type    go to state 133
    stmts   go to state 139
    compSt  go to state 135
    stmt    go to state 136
    expr    go to state 137


state 100

   42 funDec: type ID LP argDec RP error . stmts RC
